<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:orientation="vertical">

    <sgm.basicapplication.utils.custom.EditTextApp
        android:id="@+id/edt_email"
        style="@style/EditTextApp"
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/value_20dp"
        android:layout_marginRight="@dimen/value_20dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/hint_email_forgot"
        app:fontFamily="kozgopro6n_r" />

    <TextView
        android:id="@+id/tv_error_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_email"
        android:layout_marginLeft="@dimen/value_20dp"
        android:layout_marginRight="@dimen/value_20dp"
        android:textColor="@android:color/holo_red_light"
        android:visibility="gone"
        tools:visibility="visible" />

    <sgm.basicapplication.utils.custom.TextViewApp
        android:id="@+id/tv_sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/edt_email"
        android:layout_marginBottom="@dimen/value_50dp"
        android:gravity="center"
        android:text="@string/txt_forgot_sub"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <sgm.basicapplication.utils.custom.TextViewApp
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_sub"
        android:layout_marginBottom="@dimen/value_25dp"
        android:gravity="center"
        android:text="@string/txt_forgot_title"
        android:textColor="@android:color/white"
        android:textSize="21sp"
        app:fontFamily="hiramaruw6" />

    <ImageView
        android:id="@+id/imv_back"
        android:layout_width="@dimen/value_25dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/value_15dp"
        android:adjustViewBounds="true"
        android:padding="@dimen/value_5dp"
        android:src="@mipmap/ic_back" />

    <sgm.basicapplication.utils.custom.ButtonApp
        android:id="@+id/btn_send"
        style="@style/ButtonForest"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/value_50dp"
        android:paddingLeft="@dimen/value_80dp"
        android:paddingRight="@dimen/value_80dp"
        android:text="@string/btn_send"
        app:fontFamily="kozgopro6n_m"
        app:textStyle="bold" />
</RelativeLayout>