<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sgm.basicapplication.utils.BaseActivity"
    tools:openDrawer="right">

    <include layout="@layout/layout_base_content" />

    <RelativeLayout
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="@drawable/bg_menu"
        android:paddingTop="30dp">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:nestedScrollingEnabled="false"
                android:orientation="vertical">

                <sgm.basicapplication.utils.custom.TextViewApp
                    android:id="@+id/tv_home"
                    style="@style/TextMenu"
                    android:drawableLeft="@mipmap/ic_home"
                    android:paddingLeft="@dimen/value_30dp"
                    android:text="ホーム" />

                <RelativeLayout
                    android:id="@+id/rl_purchase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <sgm.basicapplication.utils.custom.TextViewApp
                        android:id="@+id/tv_library"
                        style="@style/TextMenu"
                        android:drawableLeft="@mipmap/ic_my_library"
                        android:text="マイライブラリ" />

                    <ImageView
                        android:id="@+id/imv_arrow_down"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/value_15dp"
                        android:src="@mipmap/ic_arrow_down" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/ll_expand_sub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <sgm.basicapplication.utils.custom.TextViewApp
                        android:id="@+id/tv_purchase_list"
                        style="@style/TextMenu"
                        android:background="#4f4f4f"
                        android:paddingLeft="@dimen/value_60dp"
                        android:text="購入済み" />

                    <sgm.basicapplication.utils.custom.TextViewApp
                        android:id="@+id/tv_purchase_history"
                        style="@style/TextMenu"
                        android:background="#4f4f4f"
                        android:paddingLeft="@dimen/value_60dp"
                        android:text="視聴履歴" />

                    <sgm.basicapplication.utils.custom.TextViewApp
                        android:id="@+id/tv_favorite_list"
                        style="@style/TextMenu"
                        android:background="#4f4f4f"
                        android:paddingLeft="@dimen/value_60dp"
                        android:text="お気に入り" />
                </LinearLayout>

                <sgm.basicapplication.utils.custom.TextViewApp
                    android:id="@+id/tv_profile"
                    style="@style/TextMenu"
                    android:drawableLeft="@mipmap/ic_profile"
                    android:text="マイプロフィール" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:background="#7a7876" />


                <sgm.basicapplication.utils.custom.TextViewApp
                    android:id="@+id/tv_help"
                    style="@style/TextMenu"
                    android:drawableLeft="@mipmap/ic_help"
                    android:text="有料会員のガイド"
                    android:visibility="gone" />

                <sgm.basicapplication.utils.custom.TextViewApp
                    android:id="@+id/tv_term"
                    style="@style/TextMenu"
                    android:drawableLeft="@mipmap/ic_term"
                    android:text="@string/name_menu_service" />

                <sgm.basicapplication.utils.custom.TextViewApp
                    android:id="@+id/tv_specified_transaction"
                    style="@style/TextMenu"
                    android:drawableLeft="@mipmap/ic_purchase"
                    android:text="@string/name_menu_business" />

                <sgm.basicapplication.utils.custom.TextViewApp
                    android:id="@+id/tv_privacy"
                    style="@style/TextMenu"
                    android:drawableLeft="@mipmap/ic_purchase"
                    android:text="@string/txt_privacy" />

                <sgm.basicapplication.utils.custom.TextViewApp
                    android:id="@+id/tv_device_manager"
                    style="@style/TextMenu"
                    android:drawableLeft="@mipmap/ic_device_manager"
                    android:text="@string/title_screen_manager_device"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <sgm.basicapplication.utils.custom.TextViewApp
                    android:id="@+id/tv_setting"
                    style="@style/TextMenu"
                    android:drawableLeft="@mipmap/ic_help"
                    android:text="@string/btn_setting"
                    android:visibility="visible"
                    tools:visibility="visible" />

                <sgm.basicapplication.utils.custom.TextViewApp
                    android:id="@+id/tv_login"
                    style="@style/TextMenu"
                    android:drawableLeft="@mipmap/ic_profile"
                    android:text="@string/btn_login"
                    android:visibility="gone"
                    tools:visibility="visible" />

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <sgm.basicapplication.utils.custom.TextViewApp
            android:id="@+id/tv_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:paddingBottom="15dp"
            android:text="version 3.1.1"
            android:textColor="#dadada"
            android:textSize="16sp" />
    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>
